--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,12 @@
     <script>
 
       function goToLobby(){
-        let username = $('#nameInput').val();
+        let username = encodeURI($('#nameInput').val());
         window.location.href = "lobby.html?username=" +username;
       };
 
     </script>
-    <title>Reversi</title>
+    <title>Reversi!</title>
   </head>
   <body>
     <div class = "container-fluid">
